--- a/GepRC Elegant 6/elegant6.conf
+++ b/GepRC Elegant 6/elegant6.conf
@@ -16,7 +16,9 @@ serial 3 64 115200 57600 0 115200	# T4/R4 RX
 ## beeper
 CONFIGURAR <====
 
-## led ===> Estudar e melhorar esta configuracao <=== Copiado do Elegant 5
+## led
+## ===> Estudar e melhorar esta configuracao <===
+## Copiado do Elegant 5
 led 0 7,7::ATOIW:8
 led 1 7,8::ATOIW:8
 led 2 7,9::ATO:10
