--- a/GepRC Elegant 6/elegant6.conf
+++ b/GepRC Elegant 6/elegant6.conf
@@ -1,24 +1,24 @@
 # GepRC Elegant 6
 
-## name
+# name
 name Le_Tic Elegant 6
 
-## feature
+# feature
 feature -AIRMODE
 feature TELEMETRY
 feature LED_STRIP
 feature OSD
 
-## beeper
+# beeper
 CONFIGURAR <====
 
-## serial
+# serial
 serial 1 2048 115200 57600 0 115200	# T2 VTX
 serial 3 64 115200 57600 0 115200	# T4/R4 RX
 
-## led
-## ===> Estudar e melhorar esta configuracao <===
-## Copiado do Elegant 5
+# led
+# ===> Estudar e melhorar esta configuracao <===
+# Copiado do Elegant 5
 led 0 7,7::ATOIW:8
 led 1 7,8::ATOIW:8
 led 2 7,9::ATO:10
@@ -39,7 +39,7 @@ led 16 8,14::ATOIW:0
 led 17 8,15::ATOIW:0
 
 
-## vtxtable
+# vtxtable
 vtxtable bands 5
 vtxtable channels 8
 vtxtable band 1 BOSCAM_A A CUSTOM  5865 5845 5825 5805 5785 5765 5745 5725
@@ -51,7 +51,7 @@ vtxtable powerlevels 4
 vtxtable powervalues 14 20 26 36
 vtxtable powerlabels 25 100 400 1W+
 
-## master
+# master
 set acc_calibration = -3,59,-4279,1
 
 set min_check = 1010
@@ -76,7 +76,7 @@ profile 2
 
 profile 3
 
-## restore original profile selection
+# restore original profile selection
 profile 0
 
 rateprofile 0
@@ -87,6 +87,6 @@ rateprofile 2
 
 rateprofile 3
 
-## restore original rateprofile selection
+# restore original rateprofile selection
 rateprofile 0
 
