Adiciona vtx personalizado no hd-140

--- a/LDARC HD-140/hd140.conf
+++ b/LDARC HD-140/hd140.conf
@@ -20,3 +20,8 @@ vtxtable band 6 LOWRACE  L CUSTOM  5362 5399 5436 5473 5510 5547 5584 5621
 vtxtable powerlevels 3
 vtxtable powervalues 25 100 200
 vtxtable powerlabels 25 100 200
+
+# vtx power aux 5 ✓
+    vtx 0 4 0 0 1 900 1300
+    vtx 1 4 0 0 2 1300 1700
+    vtx 2 4 0 0 3 1700 2100
