--- a/LDARC HD-140/hd140.conf
+++ b/LDARC HD-140/hd140.conf
@@ -25,3 +25,6 @@ vtxtable powerlabels 25 100 200
     vtx 0 4 0 0 1 900 1300
     vtx 1 4 0 0 2 1300 1700
     vtx 2 4 0 0 3 1700 2100
+
+# master
+set craft_name = Le_Tic HD-140
