adiciona modo pal ao geral.conf

--- a/geral.conf
+++ b/geral.conf
@@ -208,6 +208,7 @@
     set osd_canvas_width = 30
     set osd_canvas_height = 16
     set osd_craftname_msgs = OFF
+    set vcd_video_system = PAL
 
     # vtx defaults ✓
     set vtx_band = 3
