adiciona until_first_arm ao geral.conf

--- a/geral.conf
+++ b/geral.conf
@@ -214,6 +214,7 @@
     set vtx_band = 3
     set vtx_channel = 3
     set vtx_power = 3
+    set vtx_low_power_disarm = UNTIL_FIRST_ARM
     set vtx_freq = 5665
 
     # name ✓
