--- a/GepRC Cinelog25 v2/cinelog25.conf
+++ b/GepRC Cinelog25 v2/cinelog25.conf
@@ -1,4 +1,24 @@
+# GepRC CineLog25 v2
 
+# serial
+serial 20 1 115200 57600 0 115200
+serial 0 16384 115200 57600 0 115200
+serial 1 64 115200 57600 0 115200
+serial 3 8192 115200 57600 0 115200
+serial 40 0 115200 57600 0 115200
 
+# master
+set acc_calibration = 79,-48,-88,1
+set align_board_yaw = 0
+set gyro_1_sensor_align = CW180FLIP
+set gyro_1_align_roll = 0
+set gyro_1_align_pitch = 1800
+set gyro_1_align_yaw = 1800
 
-set acc_calibration = 105,-20,-4008,1
+set dyn_notch_count = 1
+set dyn_notch_q = 500
+set dshot_bidir = ON
+set motor_pwm_protocol = DSHOT300
+set motor_output_reordering = 0,2,1,3,4,5,6,7
+set motor_poles = 12
+
